--- a/app/src/main/res/layout/activity_smile.xml
+++ b/app/src/main/res/layout/activity_smile.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Smile">
 
+    <fragment
+        android:name="com.example.screens.BlankFragment"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:tag="blank_fragment"
+        app:layout_constraintBottom_toBottomOf="@+id/name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
