--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -3,23 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     tools:context=".BlankFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <fragment
-        android:name="com.example.BlankFragment"
-        app:layout_constraintBottom_toTopOf="@+id/blank"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:tag="blank_fragment" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="look at me!" />
 
 </FrameLayout>
